# NPoM-QNMs

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
geometries/circle/real equations/: mode=10_degree=3.txt  mode=11_degree=3.txt  mode=20_degree=3.txt  mode=21_degree=3.txt  mode=22_degree=3.txt  mode=33_degree=3.txt
geometries/square/imag equations/: mode=10_eq.txt  mode=2-2_eq.txt  mode=20_eq.txt  mode=21_eq.txt  mode=22_eq.txt
geometries/square/real equations/: mode=10_degree=3.txt  mode=11_degree=3.txt  mode=2-2_degree=3.txt  mode=20_degree=3.txt  mode=21_degree=3.txt  mode=22_degree=3.txt
geometries/triangle/imag equations/: mode=10_eq.txt  mode=11_eq.txt  mode=20_eq.txt  mode=21_eq.txt
geometries/triangle/real equations/: mode=10_degree=3.txt  mode=11_degree=3.txt  mode=20_degree=3.txt  mode=21_degree=3.txt
mim/: __init__.py
mim/binaries/: coef.npy  intercept.npy
water/imag equations/: mode=10_eq.txt  mode=11_eq.txt  mode=20_eq.txt  mode=21_eq.txt  mode=22.txt  mode=30_eq.txt  mode=31_eq.txt  mode=32_eq.txt  mode=33_eq.txt  mode=41_eq.txt
water/real equations/: mode=10_degree=3.txt  mode=11_degree=3.txt  mode=20_degree=3.txt  mode=21_degree=3.txt  mode=22_degree=3.txt  mode=30_degree=3.txt  mode=31_degree=3.txt  mode=32_degree=3.txt  mode=33_degree=3.txt  mode=41_degree=3.txt
