[tool.poetry]
name = "streamlit_app"
version = "1.0.0"
description = ""
authors = ["Eoin Elliott"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
streamlit = ">=0.86.0"
plotly = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
